refactorings - vorbereitung fuer produktbausteinsuche